	(Punbkpt): Refactor out cleanup calls and bkpt freeing into...
	(delete_bkpt_handler): ... this new function.  Add notifier
	cleanup calls and freeing.
	(bkpt_flush): Use it rather than open-coding the cleanup.
	(bkpt_handle_start): Call the notifiers, if any.  Don't call the
	handler if there is none.
	(bkpt_handle_post_singlestep): Likewise, for post-singlestep
	breakpoints.

	Post-handler breakpoint removal.

	* libproc/Pcontrol.h (bkpt_t.in_handler): New, true if this handler
	is executing now.
	(bkpt_t.pending_removal): New, true if Punbkpt() was called while
	in-handler.
	* libproc/Pcontrol.c (Punbkpt): Set pending_removal iff
	in_handler, rather than unhashing or removing the breakpoint.
	(bkpt_handle_start): Set in_handler around handler calls.  Call
	Punbkpt() afterwards iff pending_removal.
	(bkpt_handle_post_singlestep): Likewise.

	Miscellaneous.

	* libproc/Pcontrol.c (add_bkpt): Remove spurious return.

2013-05-20  Nick Alcock  <nick.alcock@oracle.com>

	* libproc/Psymtab.c (Prd_agent): Update lmids to initialize the
	agent.
	* libproc/Pcontrol.c (Pwait): Check 64-bitness on every exec().

2013-04-29  Nick Alcock  <nick.alcock@oracle.com>

	Move libproc tests into a separate testsuite.

	* test/unittest/libproc/*: Move to...
	* test/internals/libproc/*: ... here.
	* test/triggers/Build (TRIGGERS): Newly compose from...
	(EXTERNAL_TRIGGERS): These, run by 'make check-installed'...
	(INTERNAL_TRIGGERS): ... and these, which are not.
	(trigger-template): No longer add to TRIGGERS (it was redundant
	anyway).
	* runtest.sh: Include 'internals' in default testsuites.
	* Makerules (external-triggers): New target, running over
	EXTERNAL_TRIGGERS.
	(PHONIES): Adjust.
	* Makecheck: Depend on `external-triggers' in installed tests:
	include internal testsuite in other tests.

	* test/triggers/Build: Add rpath to victim processes.

	Bugfixes.

	* libproc/Psymtab.c (Pxlookup_by_name_internal): Do not look at
	executable mappings if mappings cannot be determined.